--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "bcrypt-nodejs": "0.0.3",
     "connect": "^3.7.0",
     "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
